# AgConnect

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agent_worker/: worker.py
app/api/v1/: api.py
app/api/v1/endpoints/: agents.py  auth.py  users.py
app/core/: config.py  dependencies.py  security.py
app/crud/: crud_agent.py  crud_user.py
app/schemas/: user.py
app/services/: livekit_service.py  supabase_client.py
backend/app/: main.py
backend/app/agent_worker/: worker.py
backend/app/agents/: search_agent.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  auth.py  users.py
backend/app/config/: config.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/crud/: crud_agent.py  crud_user.py
backend/app/schemas/: agent.py
backend/app/services/: livekit_service.py
src/: main.py
