[project]
name = "agconnect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-ai>=0.4.7",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "supabase>=2.17.0",
    "livekit-agents[openai]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
]
